wip: user update
